refactor: 일급 컬렉션 방어적 복사 적용